--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
     
 
 
+    <!-- Vendor JS Files -->
     <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/chart.js/chart.min.js"></script>
@@ -50,6 +51,7 @@
     <script src="assets/vendor/php-email-form/validate.js"></script>
   
     <!-- Template Main JS File -->
-     <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
+  
   </body>
 </html>
